--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,6 +1,8 @@
 name: Pull Request
 on:
   pull_request:
+    paths:
+      - ".github/workflows/pull_request.yml"
     types:
       - opened
       - reopened
