--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,9 +1,11 @@
 name: Dependabot
 on:
-  workflow_dispatch:
+  push:
+    paths:
+      - ".github/workflows/dependabot.yml"
 
 jobs:
-  context:
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -13,8 +15,14 @@ jobs:
       - name: v2
         uses: actions/checkout@v2
 
-      - name: Verified creater
+      - name: Verified creater v1.5.0
         uses: docker/setup-buildx-action@v1.5.0
+
+      - name: v2.3.3
+        uses: actions/checkout@v2.3.3
+
+      - name: Verified creater v1.4.0
+        uses: docker/setup-buildx-action@v1.4.0
 
       - name: Run
         run: echo "dummy"
