--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -1,28 +1,17 @@
 name: Dependabot
 on:
-  push:
-    paths:
-      - ".github/workflows/dependabot.yml"
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - name: v2.3.4
-        uses: actions/checkout@v3
-
-      - name: v2
-        uses: actions/checkout@v3
-
-      - name: Verified creater v1.5.0
-        uses: docker/setup-buildx-action@v1.6.0
-
-      - name: v2.3.3
-        uses: actions/checkout@v3
-
-      - name: Verified creater v1.4.0
-        uses: docker/setup-buildx-action@v1.6.0
-
       - name: Run
         run: echo "dummy"
+
+      - name: v2.3.1
+        uses: actions/checkout@v2.3.1
+
+      - name: Verified creater
+        uses: docker/setup-buildx-action@v1.3.0
