--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -2,6 +2,8 @@ name: Dependabot
 on:
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -9,6 +11,10 @@ jobs:
     steps:
       - name: Run
         run: echo "dummy"
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1.2.2
 
       - name: v2.3.1
         uses: actions/checkout@v2.3.1
