--- a/.github/workflows/reusable-lint.yml
+++ b/.github/workflows/reusable-lint.yml
@@ -1,19 +1,5 @@
 name: Reusable Lint
-on:
-  workflow_call:
-    inputs:
-      yamllint-config:
-        required: false
-        type: string
-        description: ".yamllint.yml path"
-  workflow_dispatch:
-    inputs:
-      yamllint-config:
-        required: false
-        type: string
-        description: ".yamllint.yml path"
-permissions:
-  contents: read
+on: workflow_call
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -22,12 +8,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Lint by yamllint
-        env:
-          CONFIG: ${{ inputs.yamllint-config }}
+      - name: Lint yaml files by yamllint
         run: |
-          DEFAULT_CONFIG="${RUNNER_TEMP}/.yamllint.yml"
-          cat <<EOF >"${DEFAULT_CONFIG}"
+          CONFIG="${RUNNER_TEMP}/.yamllint.yml"
+          cat <<EOF >"${CONFIG}"
           extends: default
           rules:
             document-start: disable
@@ -40,8 +24,15 @@ jobs:
             line-length:
               max: 150
           EOF
-          yamllint --strict --format github \
-            --config-file "${CONFIG:-${DEFAULT_CONFIG}}" .
+          if [ -e ".yamllint.yml" ]; then
+            CONFIG=".yamllint.yml"
+          fi
+          yamllint --strict --format github --config-file "${CONFIG}" .
+
+      - name: Lint workflow files by actionlint
+        run: |
+          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
+          ./actionlint
 
       - name: Format check by prettier
         run: |
