--- a/.github/workflows/call-lint.yml
+++ b/.github/workflows/call-lint.yml
@@ -1,8 +1,5 @@
 name: Call Lint
-on:
-  workflow_dispatch:
-  pull_request:
-    paths: ["**.yml", "**.yaml"]
+on: workflow_dispatch
 jobs:
   lint:
-    uses: tmknom/github-actions-playground/.github/workflows/reusable-lint.yml@main
+    uses: tmknom/github-actions-workflows/.github/workflows/lint.yml@main
