--- a/.github/workflows/call-lint.yml
+++ b/.github/workflows/call-lint.yml
@@ -2,4 +2,4 @@ name: Call Lint
 on: workflow_dispatch
 jobs:
   lint:
-    uses: tmknom/github-actions-workflows/.github/workflows/lint.yml@main
+    uses: tmknom/github-actions-workflows/.github/workflows/lint.yml@v0
