--- a/.github/workflows/call-release.yml
+++ b/.github/workflows/call-release.yml
@@ -13,6 +13,6 @@ on:
         default: "minor"
 jobs:
   release:
-    uses: tmknom/github-actions-workflows/.github/workflows/release.yml@main
+    uses: tmknom/github-actions-workflows/.github/workflows/release.yml@v0
     with:
       level: ${{ inputs.level }}
