Tweak Release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ permissions:
   contents: write
   pull-requests: write
 jobs:
-  bump:
+  release:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
