Add usage to description

--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,17 @@ name: Create PR
 description: |
   変更したファイルをGitHubへプッシュし、プルリクエストを作成します。
 
+  ## Usage
+
+  ```yaml
+    steps:
+      - uses: example/create-pr-action@v1
+        with:
+          paths: "*.md"
+          branch: example-${{ github.run_id }}
+          commit-message: Auto commit by create-pr-action
+  ```
+
 inputs:
   paths:
     required: true
