--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ description: |
 
   ```yaml
     steps:
-      - uses: example/create-pr-action@v1
+      - uses: sample/create-pr-action@v1
         with:
           paths: "*.md"
           branch: example-${{ github.run_id }}
