--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,9 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Checkout
+      uses: actions/checkout@7884fcad6b5d53d10323aee724dc68d8b9096a2e
+
     - run: "${GITHUB_ACTION_PATH}/script.sh"
       env:
         CURRENT_VERSION: ${{ inputs.version }}
