fix: reusable-release.ymlの修正

--- a/.github/workflows/reusable-release.yml
+++ b/.github/workflows/reusable-release.yml
@@ -151,6 +151,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
           set -x
+          temporary_tag_name="delete-me-${VERSION}"
           previous_tag_name_option=()
           if [[ "${PREVIOUS_VERSION}" != "${INITIAL_VERSION}" ]]; then
             previous_tag_name_option=(-f previous_tag_name="${PREVIOUS_VERSION}")
@@ -159,9 +160,11 @@ jobs:
           release_note_path="${RUNNER_TEMP}/release-${IDENTIFIER}.md"
           gh api "/repos/${GITHUB_REPOSITORY}/releases/generate-notes" \
             -f target_commitish="${COMMIT_SHA}" \
+            -f tag_name="${temporary_tag_name}" \
             "${previous_tag_name_option[@]}" \
             --jq .body > "${release_note_path}"
           echo "path=${release_note_path}" >> "${GITHUB_OUTPUT}"
+          echo "temporary-tag=${temporary_tag_name}" >> "${GITHUB_OUTPUT}"
 
       - name: Show release note
         env:
@@ -186,3 +189,11 @@ jobs:
         run: |
           set -x
           git push origin "${TEMPORARY_BRANCH}" --delete || true
+
+      - name: Delete temporary tag
+        if: ${{ always() && steps.note.outputs.temporary-tag != '' }}
+        env:
+          TEMPORARY_TAG: ${{ steps.note.outputs.temporary-tag }}
+        run: |
+          set -x
+          git push origin "${TEMPORARY_TAG}" --delete || true
