--- a/.github/workflows/_internal-label.yml
+++ b/.github/workflows/_internal-label.yml
@@ -1,4 +1,4 @@
-name: Label
+name: Internal Label
 on:
   pull_request:
 
@@ -10,7 +10,7 @@ permissions: {}
 
 jobs:
   call:
-    uses: ./.github/workflows/reusable-workflows.yml
+    uses: ./.github/workflows/reusable-label.yml
     permissions:
       contents: read
       pull-requests: write
