feat: add internal lint workflow

--- a/.github/workflows/_internal-lint.yml
+++ b/.github/workflows/_internal-lint.yml
@@ -11,6 +11,6 @@ permissions: {}
 
 jobs:
   call:
-    uses: ./.github/workflows/reusable-lint.yml
+    uses: tmknom/lint-workflows/.github/workflows/composite-action.yml@feat/add-composite-action
     permissions:
       contents: read
