--- a/.github/workflows/_internal-lint.yml
+++ b/.github/workflows/_internal-lint.yml
@@ -11,6 +11,6 @@ permissions: {}
 
 jobs:
   call:
-    uses: tmknom/lint-workflows/.github/workflows/reusable-workflows.yml@main
+    uses: ./.github/workflows/reusable-lint.yml
     permissions:
       contents: read
