v0を使うよう修正

--- a/.github/workflows/_internal-lint.yml
+++ b/.github/workflows/_internal-lint.yml
@@ -11,6 +11,6 @@ permissions: {}
 
 jobs:
   call:
-    uses: tmknom/lint-workflows/.github/workflows/composite-action.yml@feat/add-composite-action
+    uses: tmknom/lint-workflows/.github/workflows/composite-action.yml@v0
     permissions:
       contents: read
