--- a/.github/workflows/_internal-label.yml
+++ b/.github/workflows/_internal-label.yml
@@ -10,7 +10,7 @@ permissions: {}
 
 jobs:
   call:
-    uses: tmknom/label-workflows/.github/workflows/composite-action.yml@feat/add-composite-action
+    uses: tmknom/label-workflows/.github/workflows/composite-action.yml@v0
     permissions:
       contents: read
       pull-requests: write
