--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Rename me
 description: |
-  Template repository for creating Composite Action with GitHub Actions.
+  Test action.
 
   ## Usage
 
