Revert "action.ymlの修正"

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: Rename me
 description: |
-  Test action.
+  Template repository for creating Composite Action with GitHub Actions.
 
   ## Usage
 
