--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,7 +10,7 @@ permissions: {}
 
 jobs:
   call:
-    uses: ./.github/workflows/composite-action.yml
+    uses: tmknom/docs-workflows/.github/workflows/composite-action.yml@main
     permissions:
       contents: write
       pull-requests: write
