--- a/.github/workflows/reusable-label.yml
+++ b/.github/workflows/reusable-label.yml
@@ -17,54 +17,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      # https://www.conventionalcommits.org/en/v1.0.0/
-      # https://github.com/commitizen/conventional-commit-types/blob/master/index.json
-      - name: Generate configuration based on Conventional Commits
-        id: config
-        env:
-          DEFAULT_CONFIG_PATH: .github/labeler.yml
-        run: |
-          set -x
-          config_path="${DEFAULT_CONFIG_PATH}"
-          cat <<EOF >"${config_path}"
-          enhancement:
-            - head-branch: ['^feat']
-          bug:
-            - head-branch: ['^fix']
-          docs:
-            - head-branch: ["^docs"]
-            - changed-files:
-                - any-glob-to-any-file: ["**.md"]
-          style:
-            - head-branch: ["^style"]
-          refactor:
-            - head-branch: ["^refactor"]
-          perf:
-            - head-branch: ["^perf"]
-          test:
-            - head-branch: ["^test"]
-          build:
-            - head-branch: ["^build"]
-          ci:
-            - head-branch: ["^ci"]
-          chore:
-            - head-branch: ["^chore"]
-          revert:
-            - head-branch: ["^revert"]
-          EOF
-          echo "path=${config_path}" >> "${GITHUB_OUTPUT}"
-
-      - name: Show configuration
-        env:
-          CONFIG_PATH: ${{ steps.config.outputs.path }}
-        run: |
-          set -x
-          cat "${CONFIG_PATH}"
+        uses: tmknom/checkout-action@v1
 
       - name: Labeler
-        uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
-        with:
-          sync-labels: true
-          configuration-path: ${{ steps.config.outputs.path }}
+        uses: ./.github/actions/labeler-action/first/
