test-git-config-action.ymlの修正

--- a/.github/actions/git-config-action/action.yml
+++ b/.github/actions/git-config-action/action.yml
@@ -1,11 +1,11 @@
 name: Git Config
 description: |
-  Set the bot account to the Git configuration file. This action sets the following:
+  This action configures the following bot account in the Git configuration file:
 
   - **user.name**: `github-actions[bot]`
   - **user.email**: `41898282+github-actions[bot]@users.noreply.github.com`
 
-  This configuration is useful for workflows that code commits or push.
+  This configuration is useful for workflows that include code commits or pushes.
 
   ## Usage
 
@@ -19,20 +19,14 @@ runs:
   using: composite
 
   steps:
-    - name: Start log group
-      shell: bash
-      run: echo "::group::Git Config"
-
     - name: Configure bot account
       shell: bash
       env:
         USER_NAME: github-actions[bot]
         USER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
       run: |
+        echo "::group::Git Config"
         set -x
         git config --global user.name "${USER_NAME}"
         git config --global user.email "${USER_EMAIL}"
-
-    - name: End log group
-      shell: bash
-      run: echo "::endgroup::"
+        echo "::endgroup::"
