--- a/.github/workflows/test-git-config-action.yml
+++ b/.github/workflows/test-git-config-action.yml
@@ -22,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      - name: Checkout
+        uses: tmknom/checkout-action@v1
+
       - name: Exercise
         uses: ./.github/actions/git-config-action/
 
