--- a/.github/workflows/test-git-config-action.yml
+++ b/.github/workflows/test-git-config-action.yml
@@ -26,7 +26,7 @@ jobs:
         uses: tmknom/checkout-action@v1
 
       - name: Exercise
-        uses: ./.github/actions/git-config-action/
+        uses: tmknom/git-config-action@v0
 
       - name: Verify
         run: |
