--- a/.github/workflows/_internal-label.yml
+++ b/.github/workflows/_internal-label.yml
@@ -10,7 +10,8 @@ permissions: {}
 
 jobs:
   call:
-    uses: tmknom/label-workflows/.github/workflows/composite-action.yml@v0
+    # uses: tmknom/label-workflows/.github/workflows/composite-action.yml@v0
+    uses: ./.github/workflows/reusable-label.yml
     permissions:
       contents: read
       pull-requests: write
