--- a/.github/workflows/reusable-label.yml
+++ b/.github/workflows/reusable-label.yml
@@ -20,6 +20,6 @@ jobs:
         uses: tmknom/checkout-action@v1
 
       - name: Cross Labeler
-        uses: tmknom/cross-labeler-action@v0
+        uses: tmknom/cross-labeler-action@f2ddd12d2801b592aaac3997c5147cc88eb306fe # v0.2.0
         with:
           configuration-url: https://raw.githubusercontent.com/tmknom/cross-labeler-action/v0/configurations/conventional-commits.yml
